--- a/Frugl/Frugl/Views/UserSignIn/SignIn.storyboard
+++ b/Frugl/Frugl/Views/UserSignIn/SignIn.storyboard
@@ -30,7 +30,7 @@
                                         <rect key="frame" x="0.0" y="66" width="213" height="34"/>
                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                             </stackView>
