--- a/Frugl/Frugl/Views/CreateAccount/CreateAccount.storyboard
+++ b/Frugl/Frugl/Views/CreateAccount/CreateAccount.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -17,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52W-Fn-dOh">
-                                <rect key="frame" x="125.33333333333333" y="576" width="142.33333333333337" height="34.333333333333371"/>
+                                <rect key="frame" x="125.33333333333333" y="416" width="142.33333333333337" height="34.333333333333314"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Create Account"/>
                                 <connections>
@@ -37,26 +38,41 @@
                                         <rect key="frame" x="0.0" y="57" width="253" height="34"/>
                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YHo-Sz-ZLI">
                                         <rect key="frame" x="0.0" y="114" width="253" height="34"/>
                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Frugl." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMZ-PM-dnS">
+                                <rect key="frame" x="127.33333333333333" y="59.000000000000007" width="138.33333333333337" height="64.666666666666686"/>
+                                <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Bold" family="Bodoni 72 Oldstyle" pointSize="54"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Down To Frugl?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMZ-Nb-GCh">
+                                <rect key="frame" x="86.333333333333329" y="570.33333333333337" width="220.66666666666669" height="40.666666666666629"/>
+                                <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Bold" family="Bodoni 72 Oldstyle" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aN2-Lo-0hb"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.87409788369999997" green="0.88966280220000005" blue="0.96091991659999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="aN2-Lo-0hb" firstAttribute="bottom" secondItem="52W-Fn-dOh" secondAttribute="bottom" constant="207.66666666666652" id="ExZ-y0-WZx"/>
+                            <constraint firstItem="qMZ-Nb-GCh" firstAttribute="top" secondItem="52W-Fn-dOh" secondAttribute="bottom" constant="120" id="6KD-cj-Wzc"/>
+                            <constraint firstItem="52W-Fn-dOh" firstAttribute="centerX" secondItem="aN2-Lo-0hb" secondAttribute="centerX" id="AjR-3B-khh"/>
+                            <constraint firstItem="wMZ-PM-dnS" firstAttribute="centerX" secondItem="aN2-Lo-0hb" secondAttribute="centerX" id="Kc0-p5-IoV"/>
                             <constraint firstItem="bMh-L7-lPe" firstAttribute="top" secondItem="aN2-Lo-0hb" secondAttribute="top" constant="140" id="RGT-fN-W2R"/>
+                            <constraint firstItem="qMZ-Nb-GCh" firstAttribute="centerX" secondItem="aN2-Lo-0hb" secondAttribute="centerX" id="TbJ-Ti-Mwd"/>
                             <constraint firstItem="aN2-Lo-0hb" firstAttribute="trailing" secondItem="bMh-L7-lPe" secondAttribute="trailing" constant="70" id="alq-pM-SQT"/>
-                            <constraint firstItem="52W-Fn-dOh" firstAttribute="centerX" secondItem="aN2-Lo-0hb" secondAttribute="centerX" id="edl-LP-PJO"/>
                             <constraint firstItem="bMh-L7-lPe" firstAttribute="leading" secondItem="aN2-Lo-0hb" secondAttribute="leading" constant="70" id="iK3-eh-77O"/>
-                            <constraint firstItem="52W-Fn-dOh" firstAttribute="leading" secondItem="bMh-L7-lPe" secondAttribute="trailing" constant="-197.66666666666669" id="mx7-ML-bG8"/>
+                            <constraint firstItem="wMZ-PM-dnS" firstAttribute="top" secondItem="aN2-Lo-0hb" secondAttribute="top" id="j7R-9l-n5t"/>
+                            <constraint firstItem="52W-Fn-dOh" firstAttribute="top" secondItem="bMh-L7-lPe" secondAttribute="bottom" constant="69" id="pfx-fa-xkE"/>
                         </constraints>
                     </view>
                     <connections>
@@ -73,9 +89,6 @@
     <resources>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
