--- a/Frugl/Frugl/Views/Itemization/Itemization.storyboard
+++ b/Frugl/Frugl/Views/Itemization/Itemization.storyboard
@@ -18,16 +18,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="qJI-JB-gAb">
-                                <rect key="frame" x="8" y="128" width="377" height="27.666666666666657"/>
+                                <rect key="frame" x="20" y="128" width="365" height="27.666666666666657"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Budget" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ej-pg-r62">
-                                        <rect key="frame" x="0.0" y="0.0" width="173.66666666666666" height="27.666666666666668"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Budget" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ej-pg-r62">
+                                        <rect key="frame" x="0.0" y="0.0" width="167.66666666666666" height="27.666666666666668"/>
                                         <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Book" family="Bodoni 72 Oldstyle" pointSize="23"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Budget Total)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NLB-1y-urf">
-                                        <rect key="frame" x="203.66666666666663" y="0.0" width="173.33333333333337" height="27.666666666666668"/>
+                                        <rect key="frame" x="197.66666666666663" y="0.0" width="167.33333333333337" height="27.666666666666668"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -35,7 +35,7 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Vx1-IU-U3v">
-                                <rect key="frame" x="8" y="165.66666666666663" width="377" height="578"/>
+                                <rect key="frame" x="8" y="165.66666666666669" width="377" height="584.66666666666652"/>
                                 <color key="backgroundColor" red="0.87409788369999997" green="0.88966280220000005" blue="0.96091991659999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="expenseCell" textLabel="7y7-KO-d4m" rowHeight="100" style="IBUITableViewCellStyleDefault" id="inY-Lg-dx9">
@@ -59,16 +59,16 @@
                                 </prototypes>
                             </tableView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="2BH-ZK-3xA">
-                                <rect key="frame" x="8" y="751.66666666666663" width="377" height="24.333333333333371"/>
+                                <rect key="frame" x="8" y="770.33333333333337" width="377" height="27.666666666666629"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Expected Balance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5j1-mZ-YRH">
-                                        <rect key="frame" x="0.0" y="0.0" width="184.66666666666666" height="24.333333333333332"/>
-                                        <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Book" family="Bodoni 72 Oldstyle" pointSize="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="184.66666666666666" height="27.666666666666668"/>
+                                        <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Book" family="Bodoni 72 Oldstyle" pointSize="23"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="($um Number)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6K2-X9-y7k">
-                                        <rect key="frame" x="192.66666666666663" y="0.0" width="184.33333333333337" height="24.333333333333332"/>
+                                        <rect key="frame" x="192.66666666666663" y="0.0" width="184.33333333333337" height="27.666666666666668"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -89,18 +89,18 @@
                         <color key="backgroundColor" red="0.87409788369999997" green="0.88966280220000005" blue="0.96091991659999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="eb6-Aw-Fis" firstAttribute="trailing" secondItem="2BH-ZK-3xA" secondAttribute="trailing" constant="8" id="2HF-Pa-aed"/>
-                            <constraint firstItem="eb6-Aw-Fis" firstAttribute="bottom" secondItem="2BH-ZK-3xA" secondAttribute="bottom" constant="42" id="5nP-OE-1yJ"/>
                             <constraint firstItem="eb6-Aw-Fis" firstAttribute="trailing" secondItem="Vx1-IU-U3v" secondAttribute="trailing" constant="8" id="7eP-j6-dQ7"/>
                             <constraint firstItem="2BH-ZK-3xA" firstAttribute="leading" secondItem="eb6-Aw-Fis" secondAttribute="leading" constant="8" id="AjD-fT-Ocx"/>
+                            <constraint firstItem="2BH-ZK-3xA" firstAttribute="top" secondItem="Vx1-IU-U3v" secondAttribute="bottom" constant="20" id="GFA-wd-oeh"/>
                             <constraint firstItem="Vx1-IU-U3v" firstAttribute="top" secondItem="qJI-JB-gAb" secondAttribute="bottom" constant="10" id="HFj-e2-aKZ"/>
                             <constraint firstItem="iJ3-2d-44z" firstAttribute="centerX" secondItem="eb6-Aw-Fis" secondAttribute="centerX" id="HK7-5f-6FY"/>
                             <constraint firstItem="eb6-Aw-Fis" firstAttribute="trailing" secondItem="iJ3-2d-44z" secondAttribute="trailing" constant="100" id="NYf-aD-giT"/>
+                            <constraint firstItem="eb6-Aw-Fis" firstAttribute="bottom" secondItem="2BH-ZK-3xA" secondAttribute="bottom" constant="20" id="Rcb-T6-wzF"/>
                             <constraint firstItem="iJ3-2d-44z" firstAttribute="leading" secondItem="eb6-Aw-Fis" secondAttribute="leading" constant="100" id="RhV-nt-C6L"/>
                             <constraint firstItem="Vx1-IU-U3v" firstAttribute="leading" secondItem="eb6-Aw-Fis" secondAttribute="leading" constant="8" id="Rlo-Cq-7g6"/>
                             <constraint firstItem="qJI-JB-gAb" firstAttribute="top" secondItem="iJ3-2d-44z" secondAttribute="top" constant="69" id="XcA-Ag-i50"/>
-                            <constraint firstItem="2BH-ZK-3xA" firstAttribute="top" secondItem="Vx1-IU-U3v" secondAttribute="bottom" constant="8" id="ZwH-Qn-CcK"/>
                             <constraint firstItem="iJ3-2d-44z" firstAttribute="top" secondItem="eb6-Aw-Fis" secondAttribute="top" id="bhP-WQ-VUo"/>
-                            <constraint firstItem="qJI-JB-gAb" firstAttribute="leading" secondItem="eb6-Aw-Fis" secondAttribute="leading" constant="8" id="gdc-tw-yXo"/>
+                            <constraint firstItem="qJI-JB-gAb" firstAttribute="leading" secondItem="eb6-Aw-Fis" secondAttribute="leading" constant="20" id="gdc-tw-yXo"/>
                             <constraint firstItem="eb6-Aw-Fis" firstAttribute="trailing" secondItem="qJI-JB-gAb" secondAttribute="trailing" constant="8" id="lrk-YY-1V5"/>
                         </constraints>
                     </view>
