Prototype one UI View piechart

--- a/Frugl/Frugl/Views/PieChart/PieChartView.xib
+++ b/Frugl/Frugl/Views/PieChart/PieChartView.xib
@@ -47,6 +47,9 @@
                 <outlet property="label20" destination="t6R-Lq-JsT" id="lO5-Et-tmn"/>
                 <outlet property="label20XConst" destination="Ef0-4y-ND3" id="6nN-PH-4w3"/>
                 <outlet property="label20YConst" destination="Ki1-vt-fgz" id="NJN-VY-nfn"/>
+                <outlet property="label21" destination="1Xl-bj-wGP" id="Uko-ro-Hep"/>
+                <outlet property="label21XConst" destination="BSd-Vp-NkZ" id="d28-rf-wjM"/>
+                <outlet property="label21YConst" destination="efc-xd-dNX" id="0Iz-Bw-5RU"/>
                 <outlet property="label2XConst" destination="YYB-Dx-lQe" id="e3Q-Jx-hm8"/>
                 <outlet property="label2YConst" destination="vWv-46-oTs" id="geC-DD-EwN"/>
                 <outlet property="label3" destination="aeY-dW-m0b" id="uKC-gw-6e1"/>
@@ -204,6 +207,12 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Xl-bj-wGP" userLabel="Label21">
+                    <rect key="frame" x="100" y="100" width="0.0" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -216,6 +225,7 @@
                 <constraint firstItem="kna-Xs-vcS" firstAttribute="centerY" secondItem="bR3-H8-mC9" secondAttribute="centerY" id="8pC-vL-pTf"/>
                 <constraint firstItem="S1x-MH-XRq" firstAttribute="centerX" secondItem="bR3-H8-mC9" secondAttribute="centerX" id="AY4-wJ-YSD"/>
                 <constraint firstItem="y0E-bP-C84" firstAttribute="centerX" secondItem="bR3-H8-mC9" secondAttribute="centerX" id="AeY-jc-S5x"/>
+                <constraint firstItem="1Xl-bj-wGP" firstAttribute="centerX" secondItem="bR3-H8-mC9" secondAttribute="centerX" id="BSd-Vp-NkZ"/>
                 <constraint firstItem="2QB-Zq-7L4" firstAttribute="centerY" secondItem="bR3-H8-mC9" secondAttribute="centerY" id="CDw-Rr-d6e"/>
                 <constraint firstItem="sI5-U7-7Vd" firstAttribute="centerX" secondItem="bR3-H8-mC9" secondAttribute="centerX" id="DH2-HZ-hWj"/>
                 <constraint firstItem="TrV-Tn-Mio" firstAttribute="centerY" secondItem="bR3-H8-mC9" secondAttribute="centerY" id="Do6-M7-bwK"/>
@@ -237,6 +247,7 @@
                 <constraint firstItem="WDe-gD-K7F" firstAttribute="centerY" secondItem="bR3-H8-mC9" secondAttribute="centerY" id="ZS7-cl-vVc"/>
                 <constraint firstItem="S1x-MH-XRq" firstAttribute="centerY" secondItem="bR3-H8-mC9" secondAttribute="centerY" id="bUR-zV-J2r"/>
                 <constraint firstItem="uqH-lT-Glg" firstAttribute="centerX" secondItem="bR3-H8-mC9" secondAttribute="centerX" id="dXU-E1-Zga"/>
+                <constraint firstItem="1Xl-bj-wGP" firstAttribute="centerY" secondItem="bR3-H8-mC9" secondAttribute="centerY" id="efc-xd-dNX"/>
                 <constraint firstItem="WPv-Tk-eRW" firstAttribute="centerX" secondItem="bR3-H8-mC9" secondAttribute="centerX" id="h8U-K6-bvB"/>
                 <constraint firstItem="2QB-Zq-7L4" firstAttribute="centerX" secondItem="bR3-H8-mC9" secondAttribute="centerX" id="hTE-ky-DNs"/>
                 <constraint firstItem="TrV-Tn-Mio" firstAttribute="centerX" secondItem="bR3-H8-mC9" secondAttribute="centerX" id="hVd-Ag-0n5"/>
