--- a/Frugl/Frugl/Views/PieChart/PieChart.storyboard
+++ b/Frugl/Frugl/Views/PieChart/PieChart.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,7 +18,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6QY-mt-aMe">
                                 <rect key="frame" x="8" y="497" width="377" height="314"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.79250162840000005" green="0.80841249230000001" blue="0.88388162849999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="314" id="cAs-th-DFE"/>
                                 </constraints>
@@ -50,6 +49,7 @@
                                                 </stackView>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.74586264096270161" green="0.75818259684665268" blue="0.83972916637878781" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="k9D-0I-EKi" firstAttribute="centerX" secondItem="T5z-Mj-RDd" secondAttribute="centerX" id="6zk-Bx-VoS"/>
                                             <constraint firstItem="AWk-Hv-nNc" firstAttribute="leading" secondItem="T5z-Mj-RDd" secondAttribute="leading" constant="8" id="SVF-Ea-ZYk"/>
@@ -64,8 +64,8 @@
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Monthly Budget Goal)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMb-vd-JN0">
-                                <rect key="frame" x="8" y="445" width="188.33333333333334" height="20.333333333333314"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="8" y="442.33333333333331" width="188.33333333333334" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -84,20 +84,20 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(percentage)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dLA-0N-TVj">
-                                <rect key="frame" x="248" y="468" width="137" height="22.333333333333314"/>
+                                <rect key="frame" x="286" y="468" width="99" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(budget amount left)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDn-Mi-eaE">
-                                <rect key="frame" x="8" y="469" width="188.33333333333334" height="20.333333333333314"/>
+                                <rect key="frame" x="8" y="468" width="188.33333333333334" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="v8T-80-sfZ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.79250162840000005" green="0.80841249230000001" blue="0.88388162849999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="WDn-Mi-eaE" firstAttribute="trailing" secondItem="MMb-vd-JN0" secondAttribute="trailing" id="7hC-Nz-UZx"/>
                             <constraint firstItem="v8T-80-sfZ" firstAttribute="bottom" secondItem="6QY-mt-aMe" secondAttribute="bottom" constant="7" id="EDL-SL-ab3"/>
@@ -112,7 +112,6 @@
                             <constraint firstAttribute="trailing" secondItem="dLA-0N-TVj" secondAttribute="trailing" constant="8" id="fJ4-6b-riZ"/>
                             <constraint firstItem="sWj-bh-hvH" firstAttribute="top" secondItem="v8T-80-sfZ" secondAttribute="top" constant="40" id="gQ5-kZ-fys"/>
                             <constraint firstItem="WDn-Mi-eaE" firstAttribute="centerY" secondItem="dLA-0N-TVj" secondAttribute="centerY" id="kKH-ZS-Ar4"/>
-                            <constraint firstItem="dLA-0N-TVj" firstAttribute="leading" secondItem="WDn-Mi-eaE" secondAttribute="trailing" constant="51.666666666666657" id="mci-lx-DAz"/>
                             <constraint firstItem="sWj-bh-hvH" firstAttribute="width" secondItem="sWj-bh-hvH" secondAttribute="height" multiplier="1:1" id="nSp-aV-cVY"/>
                             <constraint firstItem="WDn-Mi-eaE" firstAttribute="leading" secondItem="MMb-vd-JN0" secondAttribute="leading" id="qdG-TE-4dp"/>
                             <constraint firstItem="6QY-mt-aMe" firstAttribute="leading" secondItem="v8T-80-sfZ" secondAttribute="leading" constant="8" id="wuU-iO-WmX"/>
@@ -135,8 +134,5 @@
     </scenes>
     <resources>
         <image name="chart.pie" catalog="system" width="128" height="123"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
