--- a/Frugl/Frugl/Views/BudgetGoals/BudgetGoals.storyboard
+++ b/Frugl/Frugl/Views/BudgetGoals/BudgetGoals.storyboard
@@ -45,19 +45,20 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1h-4c-QBE">
-                                <rect key="frame" x="139.33333333333334" y="267" width="114.33333333333334" height="13"/>
+                                <rect key="frame" x="130" y="267" width="133" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="FIg-co-fvs"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Add Budget"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Add Budget"/>
                                 <connections>
                                     <action selector="addBudgetButtonTapped:" destination="ztZ-mf-VA6" eventType="touchUpInside" id="tFj-iD-iDY"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="YmF-mw-9Ob">
-                                <rect key="frame" x="8" y="344" width="377" height="466"/>
+                                <rect key="frame" x="8" y="337" width="377" height="473"/>
                                 <color key="backgroundColor" red="0.87018114329999996" green="0.88916999100000005" blue="0.97054427860000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="466" id="KzN-O3-7qJ"/>
-                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="budgetCell" rowHeight="68" id="LOi-mY-Xwd" customClass="BudgetTableViewCell" customModule="Frugl" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="377" height="68"/>
@@ -111,10 +112,10 @@
                         <viewLayoutGuide key="safeArea" id="JsQ-IA-dks"/>
                         <color key="backgroundColor" red="0.87072570300826635" green="0.88931096442922009" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="JsQ-IA-dks" firstAttribute="trailing" secondItem="W1h-4c-QBE" secondAttribute="trailing" constant="130" id="4Df-To-Poj"/>
                             <constraint firstItem="SgS-qe-wo2" firstAttribute="leading" secondItem="fGW-sz-jco" secondAttribute="leading" id="ApJ-MV-7an"/>
                             <constraint firstItem="W6C-5x-O5V" firstAttribute="centerX" secondItem="JsQ-IA-dks" secondAttribute="centerX" id="IKg-ch-RSb"/>
                             <constraint firstItem="JsQ-IA-dks" firstAttribute="bottom" secondItem="YmF-mw-9Ob" secondAttribute="bottom" constant="8" id="IdU-jY-1RU"/>
-                            <constraint firstItem="YmF-mw-9Ob" firstAttribute="top" secondItem="W1h-4c-QBE" secondAttribute="bottom" constant="64" id="LYf-kQ-iex"/>
                             <constraint firstItem="JsQ-IA-dks" firstAttribute="trailing" secondItem="fGW-sz-jco" secondAttribute="trailing" constant="20" id="MD4-7f-gDA"/>
                             <constraint firstItem="fGW-sz-jco" firstAttribute="leading" secondItem="JsQ-IA-dks" secondAttribute="leading" constant="20" id="MXB-AQ-He7"/>
                             <constraint firstItem="JsQ-IA-dks" firstAttribute="trailing" secondItem="YmF-mw-9Ob" secondAttribute="trailing" constant="8" id="NoG-J6-RTb"/>
@@ -126,6 +127,8 @@
                             <constraint firstItem="W6C-5x-O5V" firstAttribute="leading" secondItem="JsQ-IA-dks" secondAttribute="leading" constant="100" id="bnE-eo-qdO"/>
                             <constraint firstItem="YmF-mw-9Ob" firstAttribute="leading" secondItem="JsQ-IA-dks" secondAttribute="leading" constant="8" id="fVZ-Hs-7mJ"/>
                             <constraint firstItem="fGW-sz-jco" firstAttribute="top" secondItem="W6C-5x-O5V" secondAttribute="bottom" constant="40" id="iY3-Mw-zeq"/>
+                            <constraint firstItem="YmF-mw-9Ob" firstAttribute="top" secondItem="W1h-4c-QBE" secondAttribute="bottom" constant="40" id="mEC-Dk-W09"/>
+                            <constraint firstItem="W1h-4c-QBE" firstAttribute="leading" secondItem="JsQ-IA-dks" secondAttribute="leading" constant="130" id="mR1-Uv-EDi"/>
                             <constraint firstItem="W1h-4c-QBE" firstAttribute="top" secondItem="SgS-qe-wo2" secondAttribute="bottom" constant="25" id="ni9-lp-twt"/>
                         </constraints>
                     </view>
@@ -145,6 +148,9 @@
     <resources>
         <image name="checkmark.circle" catalog="system" width="128" height="123"/>
         <image name="dollarsign" catalog="system" width="89" height="128"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
