--- a/Frugl/Frugl/Views/Calendar/SignOut/SignOut.storyboard
+++ b/Frugl/Frugl/Views/Calendar/SignOut/SignOut.storyboard
@@ -36,6 +36,9 @@
                                         <state key="normal" title="Delete Account">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="deleteAccountButtonTapped:" destination="aCR-3z-A4U" eventType="touchUpInside" id="JUQ-9O-hcL"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
