--- a/Frugl/Frugl/Views/Calendar/Calendar.storyboard
+++ b/Frugl/Frugl/Views/Calendar/Calendar.storyboard
@@ -88,13 +88,18 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Eon-L8-J8O"/>
+                                    <constraint firstAttribute="width" constant="393" id="Wvn-VE-mSm"/>
                                 </constraints>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fWM-tF-c5M">
                                 <rect key="frame" x="0.0" y="162.66666666666666" width="393" height="269.33333333333337"/>
                                 <color key="backgroundColor" red="0.87409847969999999" green="0.88963216540000001" blue="0.96484857800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="0.5" minimumInteritemSpacing="0.5" id="j1n-0O-Fg2">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="393" id="Iss-Wq-qUf"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.5" minimumInteritemSpacing="0.5" sectionInsetReference="safeArea" id="j1n-0O-Fg2">
                                     <size key="itemSize" width="50" height="40"/>
+                                    <size key="estimatedItemSize" width="50" height="40"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
